@@ -1,5 +1,12 @@
 2012-03-26  Steven Bosscher  <steven@gcc.gnu.org>
 
+	* toplev.c (check_global_declaration_1): Do not call assemble_external.
+	* expr.c (emit_block_move_libcall_fn): Likewise.
+	(clear_storage_libcall_fn): Likewise.
+	(expand_expr_addr_expr_1): Likewise.
+	(expand_expr_real_1): Likewise.
+	* calls.c (rtx_for_function_call): Likewise.
+
 	* varasm.c (assemble_external): Assert this function is only called
 	during or after expanding to RTL.
 
